{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 95,
  "lineage": "fb36f5fc-a3b0-f087-9aa6-e811241811a3",
  "resources": [
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/zones/us-central1-a/instanceGroups/serverpod-production-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-01-21T05:55:07.479-08:00",
            "enable_cdn": false,
            "fingerprint": "OS9EqvUU3Gc=",
            "generated_id": 6425051141215446100,
            "health_checks": [
              "projects/gen-lang-client-0412132796/global/healthChecks/serverpod-production-health-check"
            ],
            "id": "projects/gen-lang-client-0412132796/global/backendServices/serverpod-production-backend-api",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-backend-api",
            "port_name": "api",
            "project": "gen-lang-client-0412132796",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/backendServices/serverpod-production-backend-api",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "insights",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/zones/us-central1-a/instanceGroups/serverpod-production-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-01-21T05:55:07.736-08:00",
            "enable_cdn": false,
            "fingerprint": "N4eo3nKUwXc=",
            "generated_id": 3992224567742260308,
            "health_checks": [
              "projects/gen-lang-client-0412132796/global/healthChecks/serverpod-production-health-check"
            ],
            "id": "projects/gen-lang-client-0412132796/global/backendServices/serverpod-production-backend-insights",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-backend-insights",
            "port_name": "insights",
            "project": "gen-lang-client-0412132796",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/backendServices/serverpod-production-backend-insights",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/zones/us-central1-a/instanceGroups/serverpod-production-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-01-21T05:55:07.391-08:00",
            "enable_cdn": true,
            "fingerprint": "jzWjM06_1Ds=",
            "generated_id": 8138343613116277844,
            "health_checks": [
              "projects/gen-lang-client-0412132796/global/healthChecks/serverpod-production-health-check"
            ],
            "id": "projects/gen-lang-client-0412132796/global/backendServices/serverpod-production-backend-web",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-backend-web",
            "port_name": "web",
            "project": "gen-lang-client-0412132796",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/backendServices/serverpod-production-backend-web",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "serverpod-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080-8082"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-21T03:39:50.809-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gen-lang-client-0412132796/global/firewalls/serverpod-production-instance",
            "log_config": [],
            "name": "serverpod-production-instance",
            "network": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/networks/serverpod-production-network",
            "priority": 1000,
            "project": "gen-lang-client-0412132796",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/firewalls/serverpod-production-instance",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "serverpod-production-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "serverpod-instance-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-21T03:39:50.771-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gen-lang-client-0412132796/global/firewalls/serverpod-production-instance-ssh",
            "log_config": [],
            "name": "serverpod-production-instance-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/networks/serverpod-production-network",
            "priority": 1000,
            "project": "gen-lang-client-0412132796",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/firewalls/serverpod-production-instance-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "serverpod-production-instance-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "172.31.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-01-21T03:39:50.828-08:00",
            "id": "projects/gen-lang-client-0412132796/global/addresses/serverpod-production-private-ip",
            "name": "serverpod-production-private-ip",
            "network": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/networks/serverpod-production-network",
            "prefix_length": 16,
            "project": "gen-lang-client-0412132796",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/addresses/serverpod-production-private-ip"
          },
          "dependencies": [
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/gen-lang-client-0412132796/global/forwardingRules/serverpod-production-api",
            "ip_address": "34.50.146.241",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-api",
            "port_range": "443",
            "project": "gen-lang-client-0412132796",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/forwardingRules/serverpod-production-api",
            "target": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/targetHttpsProxies/serverpod-production-proxy-api"
          },
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.api",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_target_https_proxy.api",
            "module.serverpod_production.google_compute_url_map.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "insights",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/gen-lang-client-0412132796/global/forwardingRules/serverpod-production-insights",
            "ip_address": "34.8.98.43",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-insights",
            "port_range": "443",
            "project": "gen-lang-client-0412132796",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/forwardingRules/serverpod-production-insights",
            "target": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/targetHttpsProxies/serverpod-production-proxy-insights"
          },
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.insights",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_target_https_proxy.insights",
            "module.serverpod_production.google_compute_url_map.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/gen-lang-client-0412132796/global/forwardingRules/serverpod-production-web",
            "ip_address": "34.111.83.181",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-web",
            "port_range": "443",
            "project": "gen-lang-client-0412132796",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/forwardingRules/serverpod-production-web",
            "target": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/targetHttpsProxies/serverpod-production-proxy-web"
          },
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.web",
            "module.serverpod_production.google_compute_managed_ssl_certificate.web-top-domain",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_target_https_proxy.web",
            "module.serverpod_production.google_compute_url_map.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "serverpod",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gen-lang-client-0412132796/global/networks/serverpod-production-network",
            "mtu": 0,
            "name": "serverpod-production-network",
            "project": "gen-lang-client-0412132796",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/networks/serverpod-production-network"
          }
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-21T05:56:56.297-08:00",
            "id": "projects/gen-lang-client-0412132796/global/targetHttpsProxies/serverpod-production-proxy-api",
            "name": "serverpod-production-proxy-api",
            "project": "gen-lang-client-0412132796",
            "proxy_bind": false,
            "proxy_id": 1678156674681890247,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/targetHttpsProxies/serverpod-production-proxy-api",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/sslCertificates/serverpod-production-api-certificate"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/urlMaps/serverpod-production-balancer"
          },
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.api",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_url_map.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "insights",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-21T05:56:56.292-08:00",
            "id": "projects/gen-lang-client-0412132796/global/targetHttpsProxies/serverpod-production-proxy-insights",
            "name": "serverpod-production-proxy-insights",
            "project": "gen-lang-client-0412132796",
            "proxy_bind": false,
            "proxy_id": 7068137114136569287,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/targetHttpsProxies/serverpod-production-proxy-insights",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/sslCertificates/serverpod-production-insights-certificate"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/urlMaps/serverpod-production-balancer"
          },
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.insights",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_url_map.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-21T05:56:56.487-08:00",
            "id": "projects/gen-lang-client-0412132796/global/targetHttpsProxies/serverpod-production-proxy-web",
            "name": "serverpod-production-proxy-web",
            "project": "gen-lang-client-0412132796",
            "proxy_bind": false,
            "proxy_id": 2100870499870270919,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/targetHttpsProxies/serverpod-production-proxy-web",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/sslCertificates/serverpod-production-web-certificate"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/urlMaps/serverpod-production-balancer"
          },
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.web",
            "module.serverpod_production.google_compute_managed_ssl_certificate.web-top-domain",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_url_map.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "serverpod",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-21T05:56:43.957-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/backendServices/serverpod-production-backend-web",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "R5RbqDq9lZ8=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "api.butler-app-temp.com"
                ],
                "path_matcher": "api"
              },
              {
                "description": "",
                "hosts": [
                  "insights.butler-app-temp.com"
                ],
                "path_matcher": "insights"
              }
            ],
            "id": "projects/gen-lang-client-0412132796/global/urlMaps/serverpod-production-balancer",
            "map_id": 2873197987257738740,
            "name": "serverpod-production-balancer",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/backendServices/serverpod-production-backend-api",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "api",
                "path_rule": [],
                "route_rules": []
              },
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/backendServices/serverpod-production-backend-insights",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "insights",
                "path_rule": [],
                "route_rules": []
              }
            ],
            "project": "gen-lang-client-0412132796",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0412132796/global/urlMaps/serverpod-production-balancer",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    }
  ]
}